--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -24,10 +24,10 @@
 					<div class="collapse navbar-collapse"
 						id="bs-example-navbar-collapse-1">
 						<p class="navbar-text navbar-right">
-							<a href="cart_list.html" class="navbar-link">ショッピングカート</a>&nbsp;&nbsp;
-							<a href="order_history.html" class="navbar-link">注文履歴</a>&nbsp;&nbsp;
-							<a href="login.html" class="navbar-link">ログイン</a>&nbsp;&nbsp; <a
-								href="item_list.html" class="navbar-link">ログアウト</a>
+							<a href="cart_list.html" th:href="@{/cart_list}" class="navbar-link">ショッピングカート</a>&nbsp;&nbsp;
+							<a href="order_history.html" th:href="@{/order_history}" class="navbar-link">注文履歴</a>&nbsp;&nbsp;
+							<a href="login.html" th:href="@{/login}" class="navbar-link">ログイン</a>&nbsp;&nbsp; <a
+								href="item_list.html" th:href="@{/logout}" class="navbar-link">ログアウト</a>
 						</p>
 					</div>
 				</div>
