--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-    th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
 <head>
-<title>ピザ屋のネット注文</title>
+<title>ピザ注文配達サイト</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-10 col-xs-12">
 				<div class="well">
-					<form method="post" action="item_list.html">
+					<form method="post" action="item_list.html" th:action="@{/userLogin}">
 						<fieldset>
-							<legend>
-								ログイン
-							</legend>
-							<label
-									class="control-label" style="color: red" for="inputError">メールアドレス、またはパスワードが間違っています</label>
+							<legend> ログイン </legend>
+							<label th:text="${loginError}" class="control-label" style="color: red" for="inputError">メールアドレス、またはパスワードが間違っています。</label>
 							<div class="form-group">
 								<label for="inputEmail">メールアドレス:</label>
-								<input type="text" id="inputEmail" class="form-control"
-									placeholder="Email">
+								<input type="text" id="inputEmail" class="form-control" placeholder="Email" name="email">
 							</div>
 							<div class="form-group">
 								<label for="inputPassword">パスワード:</label>
-								<input type="text" id="inputPassword" class="form-control"
-									placeholder="Password">
+								<input type="text" id="inputPassword" class="form-control" placeholder="Password" name="password">
 							</div>
 							<div class="form-group">
 								<button type="submit" class="btn btn-primary">ログイン</button>
@@ -36,10 +30,10 @@
 		</div>
 		<div class="row">
 			<div class="text-center">
-				<a href="register_user.html">ユーザ登録はこちら</a>
+				<a href="register_user.html" th:href="@{/register_user}">ユーザー登録はこちら</a>
 			</div>
 		</div>
 	</div>
-	
+
 </body>
 </html>
