--- a/src/main/resources/templates/order_finished.html
+++ b/src/main/resources/templates/order_finished.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
 <head>
+<title>ピザ屋のネット注文</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
-			<div
-				class="table-responsive col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-10 col-xs-12">
+			<div class="table-responsive col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-10 col-xs-12">
 				<h3 class="text-center">決済が完了しました！</h3>
 				<div class="text-center">
 					<p>この度はご注文ありがとうございます。</p>
@@ -17,14 +16,12 @@
 			</div>
 		</div>
 
-		<br>
-		<br>
+		<br> <br>
 		<div class="row">
 			<div class="col-xs-offset-5 col-xs-2">
 				<div class="form-group">
-					<form action="order_finished.html">
-						<input class="form-control btn btn-warning btn-block"
-							type="submit" value="トップ画面を表示する">
+					<form action="order_finished.html" th:action="@{/}">
+						<input class="form-control btn btn-warning btn-block" type="submit" value="トップ画面を表示する">
 					</form>
 				</div>
 			</div>
