--- a/src/main/resources/templates/order_confirm.html
+++ b/src/main/resources/templates/order_confirm.html
@@ -27,15 +27,16 @@
 						<tr th:each="orderItem:${order.orderItemList}">
 							<td>
 								<div class="center">
-									<img th:src="@{'/img/'+${orderItem.imagePath}" class="img-responsive img-rounded" width="100" height="300"><br> じゃがバターベーコン
+									<img th:src="@{'/img/'+${orderItem.item.imagePath}}" class="img-responsive img-rounded" width="100" height="300"><br> 
+									<span th:text="${orderItem.item.name}">じゃがバターベーコン</span>
 								</div>
 							</td>
 							<td>
-								<span class="price">&nbsp;Ｌ</span>&nbsp;&nbsp;2,380円 &nbsp;&nbsp;1個
+								<span class="price">&nbsp;<span th:text="${orderItem.size}">L</span></span>&nbsp;&nbsp;<span th:text="${orderItem.item.priceM}">2,380</span>円 &nbsp;&nbsp;1個
 							</td>
 							<td>
 								<ul th:each="topping:${orderItem.orderToppingList}">
-									<li><span th:text="${topping.name}">ピーマン</span>300円</li>
+									<li><span th:text="${topping.topping.name}">ピーマン</span>300円</li>
 								</ul>
 							</td>
 							<td>
@@ -67,7 +68,7 @@
 									<div class="text-center">お名前</div>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" name="destinationName">
 								</td>
 							</tr>
 							<tr>
@@ -75,7 +76,7 @@
 									<div class="text-center">メールアドレス</div>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" name="destionationEmail">
 								</td>
 							</tr>
 							<tr>
@@ -83,7 +84,7 @@
 									<div class="text-center">郵便番号</div>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" name="destinationZipcode">
 									&nbsp;&nbsp;
 									<button>住所検索</button>
 								</td>
@@ -93,7 +94,7 @@
 									<div class="text-center">住所</div>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" name="destinationAddress">
 								</td>
 							</tr>
 							<tr>
@@ -101,7 +102,7 @@
 									<div class="text-center">電話番号</div>
 								</td>
 								<td>
-									<input type="text">
+									<input type="text" name="destinationTelephone">
 								</td>
 							</tr>
 							<tr>
