--- a/src/main/resources/templates/item_detail.html
+++ b/src/main/resources/templates/item_detail.html
@@ -1,111 +1,103 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-    th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
+
 <head>
 <title>ピザ屋のネット注文</title>
 </head>
 <body>
-	<div class="container">
+	<div class="container" id="app">
+		<el-alert title="success alert" type="success"></el-alert>
 
 		<form action="cart_list.html" th:action="@{/cart_list/addCart}" method="post">
-		<div class="row">
-			<div class="col-xs-offset-2 col-xs-8">
+			<div class="row">
+				<div class="col-xs-offset-2 col-xs-8">
 
-				<h3 class="text-center">商品詳細</h3>
-				<div class="row">
-					<div class="col-xs-5">
-						<img src="img/1.jpg" th:src="@{'/img/'+${item.imagePath}}" class="img-responsive img-rounded">
-					</div>
+					<h3 class="text-center">商品詳細</h3>
+					<div class="row">
+						<div class="col-xs-5">
+							<img src="img/1.jpg" th:src="@{'/img/'+${item.imagePath}}" class="img-responsive img-rounded">
+						</div>
 
-					<div class="col-xs-5">
-						<div class="bs-component">
-							<h4 th:text="${item.name}">じゃがバターベーコン</h4> <br>
-							<br>
-							<p th:text="${item.description}">マイルドな味付けのカレーに大きくカットしたポテトをのせた、バターとチーズの風味が食欲をそそるお子様でも楽しめる商品です。</p>
+						<div class="col-xs-5">
+							<div class="bs-component">
+								<h4 th:text="${item.name}">じゃがバターベーコン</h4>
+								<br> <br>
+								<p th:text="${item.description}">マイルドな味付けのカレーに大きくカットしたポテトをのせた、バターとチーズの風味が食欲をそそるお子様でも楽しめる商品です。</p>
+							</div>
 						</div>
 					</div>
-				</div><br>
-				<div class="row">
-					<div class="col-xs-offset-2 col-xs-8">
-						<div class="form-group">
-							<div class="row">
-								<div class="col-sm-12">
-									<label for="inputResponsibleCompany">サイズ</label>
-								</div>
-								<div class="col-sm-12">
-									<label class="radio-inline">
-										<input type="radio" name="size" value="M" checked="checked">
-										<span class="price">&nbsp;М&nbsp;</span>&nbsp;&nbsp;<span th:text="${item.priceM}">1,380</span>円(税抜)
-									</label>
-									<label class="radio-inline">
-										<input type="radio" name="size" value="L">
-										<span class="price">&nbsp;Ｌ</span>&nbsp;&nbsp;<span th:text="${item.priceL}">2,380</span>円(税抜)
-									</label>
+					<br>
+					<div class="row">
+						<div class="col-xs-offset-2 col-xs-8">
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="inputResponsibleCompany">サイズ</label>
+									</div>
+									<div class="col-sm-12">
+										<label class="radio-inline"> <el-radio v-model="val" th:label="M" name="size"> <span class="price">&nbsp;М&nbsp;</span>&nbsp;&nbsp;<span th:text="${item.priceM}">1,380</span>円(税抜)</el-radio> <input type="hidden" id="price_m" th:value="${item.priceM}">
+										</label> <label class="radio-inline"><el-radio v-model="val" th:label="L" name="size"> <span class="price">&nbsp;Ｌ</span>&nbsp;&nbsp;<span th:text="${item.priceL}">2,380</span>円(税抜) </el-radio>
+											<input type="hidden" id="price_l" th:value="${item.priceL}"> </label>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div><br>
-				<div class="row">
-					<div class="col-xs-offset-2 col-xs-8">
-						<div class="form-group">
-							<div class="row">
-								<div class="col-sm-12">
-									<label for="inputResponsibleCompany">
-										トッピング：&nbsp;1つにつき
-										<span>&nbsp;М&nbsp;</span>&nbsp;&nbsp;200円(税抜)
-										<span>&nbsp;Ｌ</span>&nbsp;&nbsp;300円(税抜)
-									</label>
-								</div>
-								<div class="col-sm-12">
-									<label class="checkbox-inline" th:each="topping:${item.toppingList}">
-										<input type="checkbox" th:value="${topping.id}" th:text="${topping.name}" name="orderToppingList">
-									</label>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-offset-2 col-xs-8">
-						<div class="form-group">
-							<div class="row">
-								<div class="col-xs-5 col-sm-5">
-									<label for="">数量:</label>
-									<label class="control-label"
-										style="color: red" for="inputError">数量を選択してください</label> <select
-										name="quantity" class="form-control">
-										<option th:each="quantity:${quantities}" th:text="${quantity}" th:value="${quantity}">1</option>
-									</select>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<br>
-				<div class="row">
-					<div class="col-xs-offset-2 col-xs-10">
-						<div class="form-group">
-							<span id="total-price">この商品金額：38,000 円(税抜)</span>
-						</div>
-					</div>
-				</div>
-				<input type="hidden" name="itemId"th:value="${item.id}">
-				<div class="row">
-					<div class="col-xs-offset-2 col-xs-3">
-						<div class="form-group">
-							<p>
-								<input class="form-control btn btn-warning btn-block"
-									type="submit" value="カートに入れる">
-							</p>
+					<br>
+					<div class="row">
+						<div class="col-xs-offset-2 col-xs-8">
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="inputResponsibleCompany"> トッピング：&nbsp;1つにつき <span>&nbsp;М&nbsp;</span>&nbsp;&nbsp;200円(税抜) <span>&nbsp;Ｌ</span>&nbsp;&nbsp;300円(税抜)
+										</label>
+									</div>
+									<div class="col-sm-12">
 
+										<label class="checkbox-inline" th:each="topping:${item.toppingList}"> <el-checkbox-group v-model="topping"> <el-checkbox th:value="${topping.id}" th:text="${topping.name}" name="orderToppingList" th:label="${topping.id}"></el-checkbox></el-checkbox-group>
+										</label>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-offset-2 col-xs-8">
+							<div class="form-group">
+								<div class="row">
+									<div class="col-xs-5 col-sm-5">
+										<label for="">数量:</label> <label class="control-label" style="color: red" for="inputError">数量を選択してください</label>
+										<el-select name="quantity" v-model="quantity"> <el-option th:each="quantity:${quantities}" th:text="${quantity}" th:value="${quantity}">1</el-option> </el-select>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<br>
+					<div class="row">
+						<div class="col-xs-offset-2 col-xs-10">
+							<div class="form-group">
+								<h2 id="total-price">この商品金額：{{sum}} 円(税抜)</h2>
+							</div>
+						</div>
+					</div>
+					<input type="hidden" name="itemId" th:value="${item.id}">
+					<div class="row">
+						<div class="col-xs-offset-2 col-xs-3">
+							<div class="form-group">
+								<p>
+									<input class="form-control btn btn-warning btn-block" type="submit" value="カートに入れる">
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 		</form>
-
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/element-ui/2.4.1/locale/en.js"></script>
+	<script th:src="@{/js/main.js}"></script>
 </body>
 </html>
