--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <title>header</title>
 </head>
@@ -9,25 +9,19 @@
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed"
-							data-toggle="collapse"
-							data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span> <span
-								class="icon-bar"></span> <span class="icon-bar"></span> <span
-								class="icon-bar"></span>
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="item_list.html" th:href="@{/}">
-							<img alt="main log" th:src="@{/img/header_logo.png}" height="35">
+						<a class="navbar-brand" href="item_list.html" th:href="@{/}"> <img alt="main log" th:src="@{/img/header_logo.png}" height="35">
 						</a>
 					</div>
 
-					<div class="collapse navbar-collapse"
-						id="bs-example-navbar-collapse-1">
+
+
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<p class="navbar-text navbar-right">
-							<a href="cart_list.html" th:href="@{/cart_list}" class="navbar-link">ショッピングカート</a>&nbsp;&nbsp;
-							<a href="order_history.html" th:href="@{/order_history}" class="navbar-link">注文履歴</a>&nbsp;&nbsp;
-							<a href="login.html" th:href="@{/login}" class="navbar-link">ログイン</a>&nbsp;&nbsp; <a
-								href="item_list.html" th:href="@{/logout}" class="navbar-link">ログアウト</a>
+							<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/insertItem}" class="navbar-link">商品登録</a>&nbsp;&nbsp; <a href="cart_list.html" class="navbar-link" th:href="@{/cart_list}">ショッピングカート</a>&nbsp;&nbsp; <a sec:authorize="hasRole('ROLE_USER')" href="order_history.html" class="navbar-link"
+								th:href="@{/orderHistory}">注文履歴</a>&nbsp;&nbsp; <a sec:authorize="isAnonymous()" href="login.html" class="navbar-link" th:href="@{/login}">ログイン</a>&nbsp;&nbsp; <a sec:authorize="hasRole('ROLE_USER')" href="item_list.html" class="navbar-link" th:href="@{/logout}">ログアウト</a>
 						</p>
 					</div>
 				</div>
