--- a/src/main/resources/templates/order_confirm.html
+++ b/src/main/resources/templates/order_confirm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" th:replace="~{layout/template :: layout(~{::title},~{::body/content()})}">
 <head>
 <title>ピザ屋のネット注文</title>
 </head>
@@ -7,8 +7,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="table-responsive col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-10 col-xs-12">
-				<h3 class="text-center">注文内容確認</h3>
-				<table class="table table-striped">
+				<h3 class="text-center">注文一覧</h3>
+				<table class="table table-striped" th:if="${order}">
 					<tbody>
 						<tr>
 							<th>
@@ -23,24 +23,34 @@
 							<th>
 								<div class="text-center">小計</div>
 							</th>
+							<th></th>
 						</tr>
 						<tr th:each="orderItem:${order.orderItemList}">
 							<td>
 								<div class="center">
-									<img th:src="@{'/img/'+${orderItem.item.imagePath}}" class="img-responsive img-rounded" width="100" height="300"><br> 
-									<span th:text="${orderItem.item.name}">じゃがバターベーコン</span>
+									<img th:src="@{'/img/'+${orderItem.item.imagePath}}" class="img-responsive img-rounded" width="100" height="300"><br> <span th:text="${orderItem.item.name}"></span>
 								</div>
 							</td>
-							<td>
-								<span class="price">&nbsp;<span th:text="${orderItem.size}">L</span></span>&nbsp;&nbsp;<span th:text="${orderItem.item.priceM}">2,380</span>円 &nbsp;&nbsp;1個
+							<td class="text-center" th:if="${orderItem.size} == 'M'">
+								<span class="price" th:text="${orderItem.size}">&nbsp;</span>&nbsp;&nbsp;<span th:text="${#numbers.formatInteger(orderItem.item.priceM, 1, 'COMMA')}">2,380</span>円 &nbsp;&nbsp;<span th:text="${orderItem.quantity}">1</span>個
+							</td>
+							<td class="text-center" th:unless="${orderItem.size} == 'M'">
+								<span class="price" th:text="${orderItem.size}">&nbsp;</span>&nbsp;&nbsp;<span th:text="${#numbers.formatInteger(orderItem.item.priceL, 1, 'COMMA')}">2,380</span>円 &nbsp;&nbsp;<span th:text="${orderItem.quantity}">1</span>個
 							</td>
 							<td>
-								<ul th:each="topping:${orderItem.orderToppingList}">
-									<li><span th:text="${topping.topping.name}">ピーマン</span>300円</li>
+								<ul th:each="orderTopping:${orderItem.orderToppingList}">
+									<li><span th:text="${orderTopping.topping.name}"></span> <span th:if="${orderItem.size} == 'M'" th:text="${orderTopping.topping.priceM}">300</span> <span th:unless="${orderItem.size} == 'M'" th:text="${orderTopping.topping.priceL}">300</span> 円</li>
 								</ul>
 							</td>
 							<td>
-								<div class="text-center">3,280円</div>
+								<div class="text-center">
+									<span th:text="${#numbers.formatInteger(orderItem.subTotal(), 1, 'COMMA')}">3,280</span>円
+								</div>
+							</td>
+							<td>
+								<div class="text-center">
+									<a th:href="@{'/cart_list/deleteCart?id='+${orderItem.id}}" class="btn btn-primary">削除</a>
+								</div>
 							</td>
 						</tr>
 					</tbody>
@@ -48,16 +58,21 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row" th:if="${order}">
 			<div class="col-xs-offset-2 col-xs-8">
 				<div class="form-group text-center">
-					<span id="total-price">消費税：8,000円</span><br> <span id="total-price">ご注文金額合計：38,000円 (税込)</span>
+					<span id="total-price">消費税：<span th:text="${#numbers.formatInteger(order.tax(), 1, 'COMMA')}">8,000</span>円
+					</span><br> <span id="total-price">ご注文金額合計：<span th:text="${#numbers.formatInteger(order.getCalcTotalPrice()+order.tax(), 1, 'COMMA')}">38,000</span>円 (税込)
+					</span>
 				</div>
 			</div>
 		</div>
+		<div th:unless="${order}">
+			<span class="text-center">商品がまだありません。</span>
+		</div>
 
 		<!-- table -->
-		<form action="order_finished.html" th:action="@{/order_finished}">
+		<form action="order_finished.html" th:action="@{/order}" th:object="${orderForm}">
 			<div class="row">
 				<div class="table-responsive col-lg-offset-3 col-lg-6 col-md-offset-1 col-md-10 col-sm-10 col-xs-12">
 					<h3 class="text-center">お届け先情報</h3>
@@ -68,7 +83,7 @@
 									<div class="text-center">お名前</div>
 								</td>
 								<td>
-									<input type="text" name="destinationName">
+									<input type="text" name="destinationName" th:field="*{destinationName}">
 								</td>
 							</tr>
 							<tr>
@@ -76,7 +91,7 @@
 									<div class="text-center">メールアドレス</div>
 								</td>
 								<td>
-									<input type="text" name="destionationEmail">
+									<input type="text" name="destionationEmail" th:field="*{destinationEmail}">
 								</td>
 							</tr>
 							<tr>
@@ -84,7 +99,7 @@
 									<div class="text-center">郵便番号</div>
 								</td>
 								<td>
-									<input type="text" name="destinationZipcode">
+									<input type="text" name="destinationZipcode" th:field="*{destinationZipcode}">
 									&nbsp;&nbsp;
 									<button>住所検索</button>
 								</td>
@@ -94,7 +109,7 @@
 									<div class="text-center">住所</div>
 								</td>
 								<td>
-									<input type="text" name="destinationAddress">
+									<input type="text" name="destinationAddress" th:field="*{destinationAddress}">
 								</td>
 							</tr>
 							<tr>
@@ -102,7 +117,7 @@
 									<div class="text-center">電話番号</div>
 								</td>
 								<td>
-									<input type="text" name="destinationTelephone">
+									<input type="text" name="destinationTel" th:field="*{destinationTel}">
 								</td>
 							</tr>
 							<tr>
@@ -122,16 +137,10 @@
 										</div>
 										<div class="row">
 											<div class="col-sm-12">
-												<label class="radio-inline"> <input type="radio" name="responsibleCompany" checked="checked"> 10時
-												</label> <label class="radio-inline"> <input type="radio" name="responsibleCompany"> 11時
-												</label> <label class="radio-inline"> <input type="radio" name="responsibleCompany"> 12時
-												</label><br> <label class="radio-inline"> <input type="radio" name="responsibleCompany"> 13時
-												</label> <label class="radio-inline"> <input type="radio" name="responsibleCompany"> 14時
-												</label> <label class="radio-inline"> <input type="radio" name="responsibleCompany"> 15時
-												</label><br> <label class="radio-inline"> <input type="radio" name="responsibleCompany"> 16時
-												</label> <label class="radio-inline"> <input type="radio" name="responsibleCompany"> 17時
-												</label> <label class="radio-inline"> <input type="radio" name="responsibleCompany"> 18時
-												</label><br>
+												<label class="radio-inline" th:each="hour:${deliveryHour}">
+												 <input type="checkbox" name="deliveryHour" th:value="${hour}" th:text="${hour}">時
+												</label>
+												<br>
 											</div>
 										</div>
 									</div>
@@ -155,7 +164,7 @@
 								<td>
 									<div class="row">
 										<div class="col-sm-12">
-											<label class="radio-inline"> <input type="radio" name="responsibleCompany" checked="checked"> 代金引換
+											<label class="radio-inline"> <input type="radio" name="paymentMethod" value="1" checked="checked"> 代金引換
 											</label>
 										</div>
 									</div>
@@ -168,7 +177,7 @@
 								<td align="center">
 									<div class="row">
 										<div class="col-sm-12">
-											<label class="radio-inline"> <input type="radio" name="responsibleCompany" checked="checked"> クレジットカード
+											<label class="radio-inline"> <input type="radio" value="2" name="paymentMethod"> クレジットカード
 											</label><br> <br>
 										</div>
 									</div>
